--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,9 @@
-/* You can add global styles to this file, and also import other style files */
+.footer {
+    position:fixed;
+    bottom: 0;
+    width:100%;
+    height: 40px;
+    background-color: rgb(144, 0, 255);
+    text-align: center;
+    color: white;
+}
